another full-read of edits added

--- a/chap1.tex
+++ b/chap1.tex
@@ -262,22 +262,22 @@ circumstances are less important, popularly, than the general
 perception that automated 
 systems, such as the robotic arms used for painting and assembly, are
 reducing the overall pool of available jobs.\footnote{A report produced for the Society of Motor
-Manufacturers and Traders in the UK suggests an alternative
-possibility: that automated cars could be 
+Manufacturers and Traders in the UK suggests an alternative: automated
+cars could be  
 expected to create 320,000 new jobs in the United Kingdom by 2030, only 25,000 of
 which would be in automotive manufacturing directly
-\cite{toveyCreate}, has everything to do with new labor involved in their
+\cite{toveyCreate}, which has everything to do with new labor involved in their
 development, production, testing, and use.}
 Modern automotive manufacturing is not alone in presenting conflicting ideas
 of what automation can do. Military manufacturing and assembly line
 history is rife with contradictions. While certain competencies were
 transferred from the skilled worker
-to the technical apparatus, human oversight and operation was still
+to the technical apparatus, human oversight and operation were still
 integral to the production of weaponry using the new technology of the
 ``American system'' of interchangeable parts. And it was
 not clear until after the fact that more mechanization was necessarily
 better.\footnote{For example, Harper's Ferry, where armorers resisted the
-  mechanization of their craft, ``competitive'' with
+  mechanization of their craft, remained ``competitive'' with
 costs at the more highly automated Springfield Armory through the mid
 1830s \cite[p. 324]{roesmithHarpers}.} The same exchange of
 competencies characterized Ford's assembly line, which began
@@ -312,7 +312,7 @@ one of the fundamental and enduring characteristics of Taylor's
 system, the expansion of management roles and the further division of
 labor, is not about automation but about new and altered
 types of human work: industry continued
-the removal of strategic decision making from the
+the removal of strategic decision-making from the
 workers most physically engaged in product production, installing it
 instead within formal organizational structures and the managers that
 constituted them. 
@@ -339,26 +339,27 @@ Motor Company's Brooks Park engine plants, near Cleveland, forty-two
 automatic machines ``linked together by transfer devices that
 automatically move the blocks through the complete process, perform
 530 precision cutting and drilling operations'' \cite[p.
-  9]{dieboldImpact}.\footnote{Through the 1,545 feet of assembly line, no human
-touched the parts.} Such is the contemporary vision of the automated factory. In
+  9]{dieboldImpact}: through 1,545 feet of assembly line, no human
+touched the parts. Such is the contemporary vision of the automated factory. In
 truth an operator stood by each machine, ensuring its continued
-operation. But this human labor, menial as it may be, is not often
+operation. This human labor, menial as it may be, is not often
 recognized.\footnote{One worker described his experience: ``I don't do nothing but
 press those two buttons . . . Sometimes I use my thumbs, sometimes I
 use my wrists and sometimes I lay my whole arm across'' \cite[p.
   10]{dieboldImpact}. And yet,
 despite the meniality of his labor, it is still integral to the
 process of production.} The worker
-no longer makes choices about how to bore a part---these choices have
-been built into the industrial equipment 
+no longer makes choices about how to bore a part---choices now built into the industrial equipment 
 she oversees---but chooses to turn the machine on and off.%% Instead, he monitors the state of the line and chooses to
 %% turn the machine on or off.
 
+%% , while automating tasks,
+
 Patterns of contingent change repeat for
-numerical control: adoption of robots to replace assembly line jobs such
+numerical control (NC): adoption of robots to replace assembly line jobs such
 as spray painting and welding was gradual, with only
 about 6,000 robots in use in American factories by the mid
-1970s \cite[p. 159]{nyeAmericas}. Industrial robots, while automating tasks,
+1970s \cite[p. 159]{nyeAmericas}. Industrial robots
 had a way of generating large contingents of skilled human laborers
 who still needed to be paid for their services:  to tend them, and
 to repair them when the broke down.\footnote{These early experiments did not
@@ -604,7 +605,7 @@ sensing and acting with corrective feedback.\footnote{This began in
    10-15]{wienerMainIdeas}.\footnote{Homeostasis, balance, and motion
  disorders like locomotor ataxia and Parkinsons all are cited by Wiener.}
  AI is interested in re-creating many of the same
- self-regulating systems within computers---and which claims a
+ self-regulating systems within computers---and claims a
  similarly broad explanatory role, whether the goal is playing chess,
  investing in the market, or driving a vehicle. 
 
@@ -714,7 +715,7 @@ Brooks's subsumption architecture \cite[p.
   353]{mobilebrooks} attempted to cut out 
 cognition altogether, focusing on sensing and reaction and iteratively
 building small systems that could cope with uncertainty:
-insects, after all, lack cognition, but respond more adroitly to the
+insects, for example, lack cognition, but respond more adroitly to the
 world than Shakey and its contemporaries. Instead of modeling the
 world, this approach treats
 the world as ``its own best model'' and focuses on embodiment and action
@@ -874,7 +875,7 @@ within the environment \cite[p. 256]{ekbia}.
 
 The layered subsumption approach is modular, building complex
 behaviors on top of and out of simpler ones, and presents tempting
-biological similes.\footnote{one can imagine the human being as a
+biological similes.\footnote{One can imagine the human being as a
 robot with a subsumption 
 architecture, where breathing and heartbeat are lower layers than balance,
 which is lower than voluntary motion, which is lower than logical
@@ -919,7 +920,7 @@ and modeling the robot's relation to it.
 %% navigates in a known space without localization will find itself
 %% getting further and further off-track.}
 
-Localization is been a fundamental issue for robotics: In order to figure out how to act, a robot
+Localization has been a fundamental issue for robotics: In order to figure out how to act, a robot
 needs to know where it is; and in general, robotic environments can be
 expected to change rapidly with motion, and to vary significantly from
 place-to-place \cite[p. 4]{SLAMbook}. Motions must continually be reevaluated in new and
@@ -929,14 +930,14 @@ relationship to some target location: this
 navigation \cite[p. 5]{SLAMbook}.\footnote{This relation can be expressed
 in different forms---either quantitative representations such as maps,
 or logical, prepositional statements---and these representations carry
-their own techniques of interpretation.} But while
-localization is the usage of elements in the environment to
+their own techniques of interpretation.} While
+localization is the usage of environmental elements to
 estimate a robot's position, those elements themselves must be known
 in order to perform this process. Mapping is the complementary
 process, the estimation of ``\emph{unknown} spatial relations that
-exist between environment elements'' in order to allow for subsequent
-navigation \cite[p. 5]{SLAMbook}. We face a somewhat tricky
-precedence problem:  in order to build maps with
+exist between environment elements'' to allow for subsequent
+navigation \cite[p. 5]{SLAMbook}. This presents a
+precedence problem:  to build maps with
 autonomous systems, the systems must know where they are; in order to know
 where they are, they must have maps to measure
 against \cite[p. 6]{SLAMbook}.
@@ -1061,7 +1062,7 @@ state-of-the-art image recognition is still considerably less capable
 than people are, many articles still present the uncritical idea that we have solved
 the image-recognition problem---or rather, that increases in computing
 power mean it will necessarily soon be solved. By this narrative, seemingly limitless
-possibilities are open before us: a new universal problem solver, like
+possibilities are open before us: a new universal problem-solver, like
 feedback control before it, seems to have broadened the frontiers
 of the future. 
 
@@ -1122,7 +1123,7 @@ knowledge is perhaps very different than our own. A deep
 epistemological question presents itself: how do we know, and how do
 machines ``know''? Many AI systems operate via statistical pattern
 recognition, so we may ask  whether we believe human intelligence is
-also merely pattern recognition: Does a system that can associate star
+also merely pattern recognition: Does a system that can associate \emph{star}
 with its definition really know what a star is? Is linguistic
 association sufficient for knowledge?
 
@@ -1151,7 +1152,7 @@ technology'' \cite[p. 15]{ornstein}.
 The two-way process of linguistic and technological change---that
 intelligence gets applied to describe whatever researchers manage to
 achieve, while real ``intelligence'' retreats away from each
-computational advance---leaves these terms poorly defined. The sort of ``understanding''
+computational advance---leaves these terms poorly defined. The ``understanding''
 involved in even the most impressive current systems is limited. Image
 recognition systems, for example, are not
 able to answer questions about the scenes that have to do with
@@ -1220,7 +1221,7 @@ system that controls the entire aircraft, but a set of specific tools
 leveraged by pilots to increase their agency. Autopilots are also complex systems, with many modes
 that require deep technical knowledge and training to use
 appropriately \cite{harrisPsych}. Stories of accidents
-due to autopilot mode confusion abound. The official crash report for
+due to autopilot mode confusion abound. The official report for
 the Air France Flight 447 crash cites a
 failed hand-over of control from the autopilot system to the pilots as
 the cause:
@@ -1510,9 +1511,9 @@ takeoff, some pilots managed to fly
 simulated rockets into orbit, serving as evidence for the importance of
 pilots to the ``reliability and flexibility'' of launch vehicles
 \cite[p. 72]{DM}.} no 
-human would fly a rocket off the launch pad. But the importance of orbital maneuvers
+human would fly a rocket off the launch pad. The importance of orbital maneuvers
  (rendezvous and docking) for the Gemini missions suggested returning
-the role of piloting to the spacecraft pilot, but as
+the role of piloting to the human, but as spacecraft
 pilots soon discovered, orbital
 rendezvous could not be achieved by the
 traditional manner of flying.
@@ -1741,7 +1742,7 @@ of both via large-scale networks of people and organizations.
 %%   exploration is in general not justifiable by scientific ends \cite[p.
 %%     194-197]{smithSelling}.} Instead of a manned program, scientists
 
-\subsection{Rovers and ``Robot Geologists''}
+\subsection{Researchers and ``Robot Geologists''}
 
  While these manned missions were occurring, scientists
  pushed for unmanned exploration,\footnote{Jerome
@@ -1761,7 +1762,7 @@ describes them often showing up anthropomorphized as a ``robot
 geologist'' or 
 ``explorer'' in news coverage \cite[p. 7]{clancey}---they are
 in reality telerobotic systems, remotely carrying out human commands.
-The rovers are not 
+The rovers (MER) are not 
 sent out to wander or find goals by themselves. They drive mostly
 blind, with only their immediate obstacle detection, following manual
 waypoints entered by human navigators on Earth: their autonomous
@@ -1787,7 +1788,7 @@ being made by humans to account for new data at each step.
 %% machine than during the earlier \emph{Viking} mission, in which weeks
 %% were spent writing programs to run the robot \cite[p. 58]{clancey}.
 The recent missions step back
-from the programmatic operation of \emph{Viking}, and toward closely
+from the programmatic operation of the earlier \emph{Viking} landers, toward closely
 coupled human control and
 supervision. The Mars rovers could
 certainly have been made more autonomous, but this would have opposed
@@ -1823,7 +1824,7 @@ task-environment'' and should be considered in those terms \cite[p.
 ``\emph{Opportunity} encountered'' something \cite[p. 8]{clancey}, but
 this is convenient shorthand for scientists on Earth encountering it
 through the telerobotic platform. Human knowledge,
-perception, and common sense is integral to rover missions, and
+perception, and common sense are integral to rover missions, and
 organizations operating expensive 
 technology in a high-risk environment quite reasonably want humans to
 be responsible
@@ -1831,8 +1832,8 @@ for the well-being of the equipment. The same issues play out with
 robotic vehicles for underwater exploration. The most famous of these,
 Alvin and Jason, deeply involve human scientists as operators in real
 time, either directly from within the vehicle or through a tethered
-link \cite{NOAA1} \cite{NOAA2}. Most AUVs (or Autonomous Underwater
-Vehicles) are not 
+link \cite{NOAA1} \cite{NOAA2}. Most autonomous underwater
+vehicles (AUVs) are not 
 truly autonomous. This is largely an issue of risk
 aversion. While it has often been assumed, even sometimes by system
 designers, that long duration missions will be performed autonomously,
@@ -1843,7 +1844,7 @@ instrument fail on the first day and not know about it for weeks. So
 instead of long, autonomous missions, most operations involve many
 shorter missions with low-bandwidth acoustic links coupling the device with
 shipboard researchers.\footnote{David Mindell, discussion with the
-  author, September 3, 2014} 
+  author, September 3, 2014.} 
 
 %% , but are operated remotely using low-bandwidth data
 %% links via acoustic communications.\footnote{David Mindell, discussion
@@ -1914,7 +1915,7 @@ for controlling their vehicles at all times, and yet these same aids
 may reduce attention and ability to react in an emergency
 situation---the other side of reducing fatigue.
 Traction and stability control are now required for all cars in the US
-market \cite{brookingsLiability}, while drivers' identities still modulate the
+market \cite{brookingsLiability}, while drivers' personal identities still modulate the
 extent to which such
 advancements are seen as valuable, or how often the features get
 turned off in day-to-day use. 
@@ -1936,13 +1937,13 @@ Human and automated capabilities take on a special role in
   high-performance racing, which, despite involving technology, puts the
   human being at the center. Modern racing cars depend on
 much accumulated engineering expertise, but racing is as much about
-the drivers as the cars and so inventiveness is often tempered by
+the drivers as the cars, and so inventiveness is often tempered by
 rules that disallow certain technologies:  ABS and traction control are
 banned from Formula 1 racing, for example. As Carlos Martinez-Vela
 describes, regarding NASCAR: ``as important as engineering science has
 become ... given
 that every team runs virtually the same technology, what makes a
-difference in performance is the 'human element.''' The human is the ``only data acquisition
+difference in performance is the `human element.''' The human is the ``only data acquisition
 system'' allowed at the track, and the abilities of human beings to
 sense and describe performance characteristics, and to work together
 as a team, are paramount in this community \cite[p.
@@ -1953,8 +1954,8 @@ An overly computerized vehicle is to some soulless, unexciting, too much like
 a video game: these vehicles may derisively be said to be for the
 PlayStation generation, even while others argue for the superior
 abilities that advanced technologies convey upon human
-drivers,\footnote{This positions stumbles upon a sort of hybrid
-  identity: the  human gains through their 
+drivers,\footnote{This position stumbles upon a sort of hybrid
+  identity: the  human gains through
 interaction with the technology.}
 turning an average driver into a hero or track-star. These gains and
 losses are not all easily quantifiable: while accident rates or track
@@ -1996,8 +1997,7 @@ These specificities are often absent
 from our dreams of self-driving vehicles, and these dreams deserve
 more careful examination for the consequences of the futures they envision.
 
-WHAT ELSE DO WE NEED? AI is not really parallel to the others in what
-it talks about; maybe this should be fixed?
+
 
 %% Now, however,
 %% let us turn to consider the stakes of the 
