--- a/chap3.tex
+++ b/chap3.tex
@@ -261,7 +261,7 @@ emphasis on partial, gradiated control\footnote{The computer system
 implement directives from the supervisor, subject to its own
 sensors \cite[p. 3]{sheridan}. Or it may act principally ``on the
 display side,'' processing incoming sensory information into a form
-digestible for the supervisor, or, as is usual, it may do some
+digestible for the supervisor, or, as is usual, it may do some of
 both \cite[p. 3]{sheridan}. As Sheridan notes, the human
 may assume direct control of the entire system or certain variables
 within the system at various points \cite[p. 3]{sheridan}.} is
@@ -875,7 +875,7 @@ positions the operator as a subject of education and regulation while
 calling upon him or her to be the ultimate decision
 authority:\footnote{They mention ``Several State automated vehicle laws
 consider the person who activates the automated vehicle system to be
-the 'driver' of the vehicle even if that person is not physically
+the `driver' of the vehicle even if that person is not physically
 present in the vehicle'': their only commentary on this point is to say
 that they know of no current systems (level 4) capable of this
 operation \cite[p. 5]{NHTSA}.} the
@@ -890,7 +890,7 @@ such as traction and electronic stability control) \cite[p. 13]{NHTSA}.
 The NHTSA framework overlooks a large proportion of the actual work of
 driving, and is therefore a poor model for evaluating and
 regulating automated vehicle systems. Its bias toward
-full-automation, structuring the hierarchy of levels around full
+full-automation, structuring the hierarchy of levels around fully
 self-driving vehicles as the technological peak, slants the
 development narrative---in popular attention as well as in
 potential regulation and legislation---toward one particular approach
@@ -909,7 +909,7 @@ systems), the technology is not yet ready.\footnote{They continually
   ready for unfettered operation \cite[p. 10, 14]{NHTSA}.} When trying to make space for
 technologies that are not yet mature, keeping a human driver in a
 position to recover when things go wrong, as the NHTSA does, makes sense as a normative
-strategy. However, the NHTSA implicitly buys in to the prevailing
+strategy. However, the NHTSA implicitly buys into the prevailing
 public-facing narrative in industry, that fully-autonomous vehicles
 are the obvious, natural end product of the evolution of automated
 systems. Their document, therefore, reinforces that narrative.
@@ -1260,7 +1260,7 @@ discussion centers around texting as a key motivator of the need for
 automated cars. But as 
 David Mindell describes, ``wanting to text is different
 from needing a fully automated vehicle,''\footnote{David Mindell,
-  discussion with the author, September 8, 2014} and it seems quite possible
+  discussion with the author, September 8, 2014.} and it seems quite possible
 to create a vehicle that will allow distractions on the order of the
 time span of writing and sending a text even if it is not feasible, or
 not culturally acceptable, to build one that is fully
@@ -1406,7 +1406,7 @@ systems, but the effect in the dominant narrative seems to be drawing a
 clear distinction between current and future automation systems. This
 distinction, evident in the NHTSA's taxonomy, is artificial. But
 consistent human involvement in vehicle operations seems to open new
-doors for human acceptance. What the agency should do is consider carefully why it feels that
+doors for human acceptance. What the NHTSA should do is consider carefully why it feels that
 ABS and traction control can be allowed to override human inputs, and
 what separates them from systems that should not be allowed to do so.
 %% , and
