--- a/concl.tex
+++ b/concl.tex
@@ -248,7 +248,7 @@ practically incomprehensible. But once we
 recognize that we \emph{already} drive through machines, and that they
 even already may drive through us,\footnote{Consider blind-spot
 warning lights, which are an automated system designed to affect the
-human and produce a response, but have no individual capacity to drive
+human and produce a response, but have no independent capacity to drive
 the vehicle.} multiple, multifaceted futures of automated vehicle
 development open to us. We are not building robotic
 chauffeurs, but rather designing ourselves, in some fashion, into more
@@ -325,7 +325,7 @@ Philosopher Andy
 Clark---drawing from a deep intellectual history that began in 1960 \cite{clyneskline}---contends that humans are ``\emph{natural-born}
 cyborgs'' \cite[p. 6]{clarkNBC}. Cyborgs are a powerful cultural
 force,\footnote{As Donna Haraway, one of the most recognized
-philosophers of cyborg culture (and cyborg feminism), describes:
+philosophers of cyborg culture, describes:
 ``Contemporary science 
 fiction is full of cyborgs---creatures simultaneously
 animal and machine, who populate worlds ambiguously natural and
@@ -495,7 +495,7 @@ for other futures. As we have seen, these approaches and
 perspectives are not those of ``mere'' luddites or humanists on the
 margins of engineering practice, but of an important segment of
 engineers themselves who are vital to the design and construction of
-successful real-world systems. The hybrid human-machine system is a
+successful real-world systems. The cyborg human-machine system is a
 very difficult engineering problem, but even the Department of Defense
 recognizes the value of serious attention to hybrid control for 
 systems that are tasked with keeping us safe, whether in space, in the
@@ -609,13 +609,14 @@ people---technologists running multinational organizations---at the
 expense of the rest of society.
 But it also does not have to be employed toward those ideological
 ends; given sufficient willpower, it can be made to serve others.
-As I held in chapter \ref{chap:2}, changes to the city
+Changes to the city
 should not be arbitrary, at the whims of a certain set of
 producers and organizations, but part of a large-scale system design
 strategy to address the needs of all transportation users. Complex
 changes to complex systems require significant modeling work,
 experiments, or even trial and error to get right. Old models and
-habits, like the rules of the AASHTO ``Green
+habits, like the rules of the AASHTO\footnote{American Association of
+  State Highway and Transportation Officials} ``Green
 Book'' \cite[p. 181, 183]{swopeTrenton}, need to be broken, and new
 ones built to replace them. 
 
@@ -629,33 +630,41 @@ ones built to replace them.
 %% argument revolves around responsibility for the rollout of
 %% self-driving systems. On the pro-side, 
 
-One narrative trying to drive automation based on social goods is that undue caution in the
-rollout of autonomous vehicles will directly ``cost'' lives, since
-people are killed by human drivers every day \cite{driverlessfuture}.
-This ideology posits lowering accident rates above all else, leaving
-no space for human squeamishness about technology and responsibility. 
-The statistical argument suggests that the death rate is all that
-matters, but humans are notoriously bad at understanding and
-responding to statistics. Commentators stress the many
-thousands who will die if self-driving systems are not implemented
-soon, using that as a lever to argue for the moral imperative of
-speeding up their legalization and acceptance \cite{baileyReason}
-\cite{howardRobots}. On the con-side, in 
-this interpretation, stand the risk-averse regulators: current deaths
-are obviously not on their hands, but if one child is killed by a
-``robot car,'' they face public censure. But though this cartoonlike
-view of reality does have a media public face, it does not do justice
-to the complexity of the situation. The statistics about driverless
+%% This ideology posits lowering accident rates above all else, leaving
+%% no space for human squeamishness about technology and responsibility. 
+%% The statistical argument suggests that the death rate is all that
+%% matters, but humans are notoriously bad at understanding and
+%% responding to statistics.
+
+%% does have a media public face,
+
+%% While we can point to the 90\% of accidents that involve human error,
+%% computers will fix some of these types of error but may also cause
+%% other problems, and even increase failure rates unrelated to human error.
+%% The safety record of ``current'' vehicles is also not fixed; even if
+%% we were to accept the popularly figured distinction between
+%% incremental autonomy and ``complete'' autonomy approaches, the safety
+%% of increasingly autonomous vehicles is a moving target against which
+%% the achievements of more radical approaches would need to be
+%% compared.
+
+%% But this cartoonlike
+%% view of reality it does not do justice
+%% to the complexity of the situation. T
+
+Narratives that undue caution in the
+rollout of autonomous vehicles will directly ``cost'' lives---since
+people are killed by human drivers every day \cite{driverlessfuture}
+\cite{baileyReason} \cite{howardRobots}---
+may be used as a lever to argue for the moral imperative of
+speedy legalization and acceptance, pitted against risk-averse regulators who face
+public censure if but one child is killed by a
+``robot car.'' But the statistics about driverless
 cars and risk, though partly a function of mathematical modeling, are
-also, fundamentally, matters of faith. No one has the precise answer.
-While we can point to the 90\% of accidents that involve human error,
-computers will fix some of these types of error but may also cause
-other problems, and even increase failure rates unrelated to human error.
-The safety record of ``current'' vehicles is also not fixed; even if
-we were to accept the popularly figured distinction between
-incremental autonomy and ``complete'' autonomy approaches, the safety
-of increasingly autonomous vehicles is a moving target against which
-the achievements of more radical approaches would need to be compared.
+also, fundamentally, matters of faith. There is no precise answer, as
+humans and machines both err alone or in combination, and
+the safety of increasingly autonomous vehicles is a moving target
+against which more radical approaches must be compared.
 Complex changes to complex, high-stakes systems produce unpredictable
 results. So how we implement automated vehicle technology is
 about narratives, the stories we believe and tell about technology, as
@@ -670,10 +679,19 @@ the roadway.
 %% of whether fully automated cars can come to exist, even as they are
 %% now envisioned.
 
-Our choice should not be to either accept this driverless vision or take
-responsibility for the deaths of thousands. That viewpoint is abusive, coercive,
-and deeply wrong, and the future is too important to be left up to
-knee-jerk techno-utopianism and blind ideology. I am not saying that
+%abusive
+
+%% Our choice should not be to either accept this driverless vision or take
+%% responsibility for the deaths of thousands. That viewpoint is cartoonlike, coercive,
+%% and deeply wrong, and the future is too important to be left up to
+%% knee-jerk techno-utopianism and blind ideology.
+
+Heterogeneous
+approaches are valuable, since there is no one-size-fits-all
+automation solution, no magic technological fix to social and transit
+problems. But despite a hesitance to prescribe particular
+technologies, current taxonomies and policy documents normalize
+certain ideas about automation, while ignoring others. I am not saying that
 the science-fiction dreams of 
 driverless vehicles are possible or impossible; moreover, I believe in the
 potential of computer technologies to achieve groundbreaking results.
@@ -714,6 +732,8 @@ or ``save more lives''?\footnote{These are deep and subtle questions,
 philosophies---Who is saved? How? Who bears the cost, or is
 counted out in order to save the greater number?---that come to deeply
 affect how systems engineered from them alter the world.
+
+
 %% (Evan, on Hippocratic oath: why is it ``do no harm'' not ``save more
 %% lives''?
 %% there may be hidden consequences to a philosophy of saving more lives)
@@ -810,6 +830,12 @@ near term or long term.
 %% acceptance, and address the human goals that drive technological
 %% development.
 
+%%  not ideologically
+%% driven.
+%% the future is too important to be left up to
+%% knee-jerk techno-utopianism and blind ideology: 
+
+
 The ``autonomous'' vehicle is a
 similar sort of myth to that of the ``personless'' factory or the
 self-teaching computer program: always a 
@@ -817,10 +843,9 @@ product of people, responsible to people, and involving people,
 however far in the margins of our vision. Writing this off as
 anomaly or failure, and focusing on ``autonomy'' or ``self-driving,''
 obscures real complexities of operation that encounters with the world
-will inevitably involve. The important questions are when and how 
-people are
-involved, and this should be empirically not ideologically
-driven.
+will inevitably involve. The important considerations of when and how 
+people are involved should be addressed carefully and
+empirically, not by knee-jerk techno-utopianism and blind ideology.
 There is hope in this altered narrative to ameliorate some of
 the issues facing automated vehicles today. 
 Rather than ``to automate or not to automate,'' we should ask
@@ -835,7 +860,7 @@ Recognizing that continued human involvement will occur as a matter of
 principle is 
 the most important first step we can take toward rebalancing the
 narrative of automation toward something more productive, which takes
-seriously the technological hybridity of our past, present, and future.
+seriously the technological hybridity of our cyborg past, present, and future.
 In addition, this recognition paves the way for a political critique
 of automated vehicles 
 that asks, knowing 
