--- a/intro.tex
+++ b/intro.tex
@@ -56,16 +56,18 @@ development, and alter how developments are represented and discussed
 in popular media. What we believe self-driving cars to be---or what we
 believe they soon will be---is a product of the popular, teleological understanding
 of technology development, which draws from existing technocratic
-narratives.\footnote{These narratives are deeply, though 
-  not exclusively, American, and are intertwined with stories of
-  American technological progress over the last century, from the
-  Manhattan Project to the Apollo Program to ARPAnet to IBM's
-  Watson.} Alternative paradigms exist,
+narratives. Alternative paradigms exist,
 but deserve much broader recognition outside of certain engineering circles. In
 order to understand the way that automated vehicles have been figured
 popularly, the implications of that vision, and the alternatives to
 it, we should start by examining the varied types and dimensions
 of historical automotive automation research.
+
+%% \footnote{These narratives are deeply, though 
+%%   not exclusively, American, and are intertwined with stories of
+%%   American technological progress over the last century, from the
+%%   Manhattan Project to the Apollo Program to ARPAnet to IBM's
+%%   Watson.}
 
 %% It is
 %% vital that we recognize t
@@ -99,7 +101,7 @@ constant nor a foregone conclusion.
 
 Houdina's early experiments in radio-controlled vehicles (which began
 this chapter) put us into a time period in which radio was an
-exciting, emerging technology, that was envisioned as a way to take
+exciting, emerging technology that was envisioned as a way to take
 the driver out of the vehicle, even if a human's direct commands were
 still necessary for vehicle operations. Aachen Motors's ``Phantom
 Auto,'' operating on the same principles, toured Milwaukee a year
@@ -223,9 +225,9 @@ between sensing and acting in the manner of a ``teleological''
 self-governing mechanism with corrective feedback:  the simple
 idea of feedback control opens a vast array of new potentialities for
 the future. But how 
-the car's governor could be modified to allow it to race with or
-beside other cars is not mentioned, which is telling since it is the
-complexities of the road environment that make automated driving so difficult.
+the car's governor could be modified to allow it to race
+beside other cars is not mentioned, which is telling since the
+complexities of the environment are what make automated driving so difficult.
 
 \subsection{The Midcentury}
 
@@ -317,7 +319,7 @@ of an `electronic brain' on a dream highway of the future'' \cite[p.
 would have been the realization of the New York World's Fair exhibit
 from two decades earlier. Building to make
 this optimistic vision of GM's engineering ability a reality,
-engineers lead by Joseph Bidwell and Lawrence Hafstad within GM
+engineers led by Joseph Bidwell and Lawrence Hafstad within GM
 Research installed ``pick-up coils'' on a 1958 Chevrolet: through a
 feedback system like that of the ``electric eye automobile,'' these
 coils would detect a wire embedded in the road and adjust the
@@ -455,7 +457,7 @@ successful conclusion in 1994 and 1995 with 1000 kilometers of largely
 autonomous operation in normal traffic conditions on Paris motorways,
 as well as a finale drive from Munich to Copenhagen \cite{makingBertha}.
 Meanwhile, vision-based research also occurred actively in the United States;
-Congress' passing of the Intermodal 
+Congress's passing of the Intermodal 
 Surface Transportation Efficiency Act in 1991 allowed for \$650 million
 in funding for driverless vehicle research over the following six
 years
@@ -471,10 +473,13 @@ improvements in safety and environmental impact, as Rodney Slater of
 the Federal Highway Administration described in a 1993 announcement
 \cite[p. 30]{wetmore}.
 Notably, a Congressional report described the goal as ``hands-off,
-feet-off'' driving \cite{novakAlmost}, language which returns in the NHTSA's recent
+feet-off'' driving \cite{novakAlmost}, language which returns in the
+National Highway Traffic Safety Administration's recent
 \emph{Preliminary Statement of Policy Concerning Automated Vehicles}
-and proves similarly unhelpful, as will be described in chapter
-\ref{chap:3}.
+and proves similarly unhelpful.
+
+%% , as will be described in chapter
+%% \ref{chap:3}
 
 %TODO(DONE) expand
 %% Brief section about this project
@@ -513,6 +518,13 @@ modern self-driving car, as instantiated within Google's design approach.
 
 \subsection{Automated Cars in 2015}
 
+%% Even Apple is rumored, as of the time of writing,
+%% to be working on an autonomous vehicle, though its approach has not
+%% yet been made public \cite{taylorApple}.\footnote{Notwithstanding an
+%%   unnamed industry source, there is some
+%%   speculation that observed Apple-registered vehicles are a publicity stunt or part of
+%%   a mapping exercise instead \cite{bonningtonCurious}.}
+
 Approaches today have a variety of forms. While Google is making
 headlines with its self-driving vehicle research, and is defining the
 look of the autonomous car with its roof mounted LIDAR\footnote{LIght
@@ -526,12 +538,7 @@ already seen in the new S-class luxury sedan, though these vehicles
 have not yet reached the level of capability of Mercedes's
 test vehicle \cite{makingBertha}. But these sensing choices come with their own
 trade-offs in terms of operations, safety, and how safety can be
-determined and proven. Even Apple seems, as of the time of writing,
-to be working on an autonomous vehicle, though its approach has not
-yet been made public \cite{taylorApple}.\footnote{Notwithstanding an
-  unnammed industry source, there is some
-  speculation that observed Apple-registered vehicles are a publicity stunt or part of
-  a mapping exercise instead \cite{bonningtonCurious}.} Tesla Motors
+determined and proven. Tesla Motors
 is also working on an iterated 
 approach to vehicle autonomy, focusing publicly on software updates to
 existing cars that add new automated features. Volvo is both involved
@@ -617,7 +624,8 @@ puts forward the
 idea that self-driving vehicles will be commercially available in as little
 as five years, and that in just two decades the majority of cars on the road will be
 fully autonomous. Even respected business-information and consulting
-bodies have bought into this dream.\footnote{For example, the IHS
+bodies have bought into this dream.\footnote{For example,
+  IHS Automotive
   predicts 54 million such vehicles by 2035, which is not as extreme,
   but still a sizable fraction of road vehicles \cite{IHSstudy}.} In
 these vehicles, the users would 
@@ -684,7 +692,7 @@ human beings for computer error. Among others, Bill Gurley, an Uber
 investor interviewed because of his connection to companies engaged in
 driverless vehicle research, believes that given the
 catastrophic potential for errors, the reliability requirement
-for these systems---''four nines,'' as he describes it---renders the
+for these systems---``four nines,'' as he describes it---renders the
 technology ``a long way 
 off'' \cite{shontellTop}. John Leonard, notable as one of the researchers who
 worked on MIT's entrant to the DARPA Urban Challenge in 2007, has gone
@@ -856,8 +864,8 @@ technology, and public acceptance. My research materials have
 therefore consisted not only of public media portrayals of automated
 vehicle efforts---comprising hundreds of news articles accessed
 between March 2014 and April 2015---but also other public
-documentation including patents, research papers in robotics,
-computer science, law, and ethics, and books on computers, automation systems,
+documentation including patents; research papers in robotics,
+computer science, law, and ethics; and books on computers, automation systems,
 and their human 
 interrelationships. I attended three information-technology or urban-planning
 related conferences at MIT to examine the presentation of automated
