--- a/main.bib
+++ b/main.bib
@@ -792,7 +792,7 @@
 }
 
 @UNPUBLISHED{ICO,
-   key = "Information Commissioner's Office",
+   key = "ICO",
    author = "",
    year = "2014",
    title = "{S}ummary of {C}osteja",
@@ -1096,7 +1096,7 @@
 }
 
 @TECHREPORT{DSB,
-   author = "Defense Science Board",
+   author = "{DSB}",
    title = "{T}he {R}ole of {A}utonomy in {D}o{D} {S}ystems",
    institution = "Department of Defense",
    month = "July",
@@ -1443,14 +1443,14 @@
 }
 
 @ARTICLE{NOAA1,
-   author = "{National Oceanic and Atmospheric Administration}",
+   author = "{NOAA}",
    title = "{A}lvin",
    journal = "NOAA Website",
    note = "http://oceanexplorer.noaa.gov/technology/subs/alvin/alvin.html",
 }
 
 @ARTICLE{NOAA2,
-   author = "{National Oceanic and Atmospheric Administration}",
+   author = "{NOAA}",
    title = "{J}ason",
    journal = "NOAA Website",
    note = "http://oceanexplorer.noaa.gov/technology/subs/jason/jason.html",
@@ -1468,9 +1468,9 @@
 }
 
 @TECHREPORT{AF447,
-   author = "{Bureau d'Enquetes et d'Analyses}",
+   author = "{BEA}",
    title = "Final report on the accident on 1st {J}une 2009 to the {A}irbus {A}330-203 registered {F-GZCP} operated by {A}ir {F}rance flight {AF}-447 {R}io de {J}aniero -- Paris",
-   type = "BEA Crash Report",
+   type = "Bureau d'Enquetes et d'Analyses Crash Report",
    month = "June",
    year = "2012",
    note = "English Edition",
@@ -1564,7 +1564,7 @@
 }
 
 @UNPUBLISHED{googleJobPosting,
-   key = "Self-Driving Vehicle Operator / Operations Associate",
+   key = "HireArt",
    author = "",
    title = "Self-Driving Vehicle Operator / Operations Associate",
    note = "HireArt Job Posting: https://www.hireart.com/jobs/6ba4ebe8/apply?",
@@ -1625,8 +1625,7 @@
 }
 
 @TECHREPORT{NHTSAcrash,
-   key = "{National Highway Traffic Safety Administration}",
-   author = "",
+   author = "NHTSA",
    title = "{N}ational {M}otor {V}ehicle {C}rash {C}ausation {S}urvey: {R}eport to {C}ongress",
    institution = "National Highway Traffic Safety Administration",
    number = "DOT HS 811 059",
@@ -1815,9 +1814,9 @@
 }
 
 @ARTICLE{phantomAuto,
-   key = "'Phantom Auto' will ...",
+   key = "`Phantom Auto' will ...",
    author = "",
-   title = "'Phantom Auto' will tour city",
+   title = "`Phantom Auto' will tour city",
    journal = "The Milwaukee Sentinel",
    month = "December 8",
    year = "1926",
@@ -1825,9 +1824,9 @@
 }
 
 @ARTICLE{phantomAuto2,
-   key = "'Phantom Auto' to Be ...",
+   key = "`Phantom Auto' to Be ...",
    author = "",
-   title = "'Phantom Auto' to Be Operated Here",
+   title = "`Phantom Auto' to Be Operated Here",
    journal = "The Free-Lance Star",
    month = "June 17",
    year = "1932",
